# deepreefmap-api

./: Dockerfile  Dockerfile.dev  README.md  prestart.sh  pyproject.toml  seed_db.py
.github/workflows/: publish-container.yml  pytest.yml
app/: config.py  crud.py  db.py  main.py  s3.py  utils.py
app/areas/: models.py  views.py
app/auth/: models.py  services.py
app/migrations/: env.py
app/object_store/: service.py
app/objects/: hooks.py  service.py  utils.py  views.py
app/root/: views.py
app/s3/: multipartupload.py
app/sensor_data/: views.py
app/sensors/: models.py  views.py
app/status/: models.py  views.py
app/submissions/: k8s.py  models.py  utils.py  views.py
app/tests/: conftest.py  test_areas.py
app/transects/: models.py  views.py
app/users/: models.py  views.py
migrations/: env.py
migrations/versions/: 02d2ae4ca13d_add_processing_fields_to_object.py  1d48dc4b8e9b_set_fps_to_integer.py  2383bd7f9d7a_add_geom_to_transect.py  2852b3ff35c0_add_sensor_data.py  2abbbe9c2c21_initial_db_with_submission_object.py  2d47fc071033_add_parts_json_column.py  2e62b8e493a5_add_upload_id_to_object.py  37c78b95d76b_init.py  395a34832513_add_transect_relationship_to_submission.py  43c9334ac306_add_a_user_relationship_to_all_objects.py  4696f4220f0f_add_processing_order_to_relationship.py  570ab5d238cb_add_frame_count.py  5765d24aa613_add_unique_constraint_on_processing_.py  63afeb63c97d_add_extra_columns_to_sensor.py  6b0a81457a78_add_processing_fields_to_object_again.py  73c7306d0019_add_transect_table.py  8041943d6cd9_add_all_parts_received_field.py  8d7422db3562_add_time_of_last_part_update.py  8fc044200f13_add_inputobject_table_and_link_table.py  9468a36630cd_add_run_status_table.py  98b52878465e_add_fields_and_relationship_to_transect.py  9b3f99b1ef18_add_percentage_covers_json_column.py  a153c3f14df3_add_indexes_on_owner_column_and_set_as_.py  a3ada9625247_init.py  b1538c2d0bad_add_status_columns.py  b86e764de041_update_field_names_foreign_keys_and_.py  bba1729cfeda_add_submission_links.py  bdf12ab3fc0c_add_relationship.py  c1d3c288748f_add_time_periods_and_fps.py  cdf1f60a5f96_add_notes_to_object.py  f0cdbc3b3150_init.py  f1fcaab724c8_convert_numeric_fields_to_float.py  (+2 more)
tests/: conftest.py
(+10 files in other folders)
