[tool.poetry]
name = "deepreefmap-api"
version = "0.2.4"
description = "API to manage data for deepreefmap project in ECEO lab"
authors = ["Evan Thomas <evan.thomas@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.16"
aiosqlite = "^0.19.0"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
asyncpg = "^0.29.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"
setuptools = "^68.2.2"
wheel = "^0.41.3"
numpy = "^1.26.1"
python-multipart = "^0.0.9"
kubernetes = "^29.0.0"
pydantic-settings = "^2.2.1"
streaming-form-data = "^1.15.0"
aioboto3 = "^12.3.0"
opencv-python-headless = "^4.9.0.80"
geoalchemy2 = "^0.15.1"
shapely = "^2.0.4"
pyproj = "^3.6.1"
geos = "^0.2.3"
fiona = "^1.9.6"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
python-keycloak = "^4.3.0"
fastapi-keycloak = "^1.0.11"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"
jupyterlab = "^4.1.2"
spatialite = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
